--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+body {
+    background-color: #1F2937;
+    color: #fafafa;
+
+}
