animation added on hero component

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @import 'tailwindcss/utilities';
 
 body {
-    background-color: #1F2937;
+    background-color: #1B1F24;
     color: #fafafa;
 
 }
